--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
       <!-- BUTTON AREA -->
       <div class="container">
         <div class="start">
-          <button class="btn"></button>
+          <button class="btn" id="start"></button>
         </div>
         <div class="auto-click">
-          <button class="btn"></button>
+          <button class="btn" id="auto-click"></button>
         </div>
         <div class="multiplier">
-          <button class="btn"></button>
+          <button class="btn" id="multiplier"></button>
         </div>
         <div class="boost">
-          <button class="btn"></button>
+          <button class="btn" id="boost"></button>
         </div>
       </div>
 
