--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <div class="container">
         <div class="start">
           <button class="btn" id="start"></button>
+        <img id="salty" src="image/salty.png" width= 150px height= 150px alt="salt">
         </div>
         <div class="auto-click">
           <button class="btn" id="auto-click"></button>
@@ -32,7 +33,7 @@
 
       <!-- SALT AREA -->
       <div class="salt">
-        <img src="" alt="" />
+        <img src="salty.png" alt="salt" />
       </div>
 
       <!-- SCORE AREA -->
@@ -43,5 +44,6 @@
     </main>
     <footer></footer>
     <script src="assets/script.js"></script>
+    <script src="marty.js"></script>
   </body>
 </html>
