--- a/index.html
+++ b/index.html
@@ -10,8 +10,37 @@
   </head>
 
   <body>
-    <header></header>
-    <main></main>
+    <header>
+      <h1>Salt simulator</h1>
+    </header>
+    <main>
+      <!-- BUTTON AREA -->
+      <div class="container">
+        <div class="start">
+          <button class="btn"></button>
+        </div>
+        <div class="auto-click">
+          <button class="btn"></button>
+        </div>
+        <div class="multiplier">
+          <button class="btn"></button>
+        </div>
+        <div class="boost">
+          <button class="btn"></button>
+        </div>
+      </div>
+
+      <!-- SALT AREA -->
+      <div class="salt">
+        <img src="" alt="" />
+      </div>
+
+      <!-- SCORE AREA -->
+      <div class="score">
+        <p>Score :</p>
+        <p id="score">0000</p>
+      </div>
+    </main>
     <footer></footer>
     <script src="assets/script.js"></script>
   </body>
