--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
           <button class="btn" id="multiplier"></button>
         </div>
         <div class="boost">
-          <button class="btn" id="boost"></button>
+          <button class="btn" id="boost">BOOST!!</button>
+          <p> Seconds left on Boost:</p>
+          <p id="BoostTimer"> 0 </p>
         </div>
       </div>
 
@@ -43,7 +45,10 @@
       </div>
     </main>
     <footer></footer>
-    <script src="assets/script.js"></script>
-    <script src="marty.js"></script>
+    <script type= "module" src="assets/script.js"></script>
+    <script type= "module" src="assets/marty.js"></script>
+    <script type= "module" src="assets/Frank.js"></script>
+    <script type= "module" src="assets/ania.js"></script>
+    <script type= "module" src="assets/joao.js"></script>
   </body>
 </html>
