function multi init

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
 
       <!-- SCORE AREA -->
-      <div class="score">
+      <div class="scorePart">
         <p>Score :</p>
         <p id="score">0000</p>
       </div>
