--- a/index.html
+++ b/index.html
@@ -18,13 +18,25 @@
       <div class="container">
         <div class="start">
           <button class="btn" id="start"></button>
-        <img id="salty" src="image/salty.png" width= 150px height= 150px alt="salt">
+          <img
+            id="salty"
+            src="image/salty.png"
+            width="150px"
+            height="150px"
+            alt="salt"
+          />
         </div>
         <div class="auto-click">
           <button class="btn" id="auto-click"></button>
         </div>
-        <div class="multiplier">
-          <button class="btn" id="multiplier"></button>
+        <div class="double">
+          <button class="btn" id="double">
+            <span class="name">Clicker x2</span>
+            <span class="price"
+              >Cost :
+              <p>25</p></span
+            >
+          </button>
         </div>
         <div class="boost">
           <button class="btn" id="boost"></button>
@@ -45,5 +57,6 @@
     <footer></footer>
     <script src="assets/script.js"></script>
     <script src="marty.js"></script>
+    <script src="assets/ania.js"></script>
   </body>
 </html>
