--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       </div>
     </main>
     <footer></footer>
-    <script src="assets/js/joao.js"></script>
+    <script type="module" src="assets/js/joao.js"></script>
+    <script type="module" src="jstest.js"></script>
   </body>
 </html>
