--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       </div>
     </main>
     <footer></footer>
-    <script src="assets/script.js"></script>
-    <script src="marty.js"></script>
-    <script src="assets/ania.js"></script>
+    <script type="module" src="assets/script.js"></script>
+    <script type="module" src="marty.js"></script>
+    <script type="module" src="assets/ania.js"></script>
   </body>
 </html>
