--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <div class="auto-click">
           <button class="btn" id="auto-click"></button>
         </div>
-        <div class="double">
-          <button class="btn" id="double">
+        <div class="multi">
+          <button class="btn" id="double" disabled>
             <span class="name">Clicker x2</span>
             <span class="price"
               >Cost :
@@ -40,8 +40,8 @@
         </div>
         <div class="boost">
           <button class="btn" id="boost">BOOST!!</button>
-          <p> Seconds left on Boost:</p>
-          <p id="BoostTimer"> 0 </p>
+          <p>Seconds left on Boost:</p>
+          <p id="BoostTimer">0</p>
         </div>
       </div>
 
@@ -57,10 +57,10 @@
       </div>
     </main>
     <footer></footer>
-    <script type= "module" src="assets/script.js"></script>
-    <script type= "module" src="assets/marty.js"></script>
-    <script type= "module" src="assets/Frank.js"></script>
-    <script type= "module" src="assets/ania.js"></script>
-    <script type= "module" src="assets/joao.js"></script>
+    <script type="module" src="assets/script.js"></script>
+    <script type="module" src="assets/marty.js"></script>
+    <script type="module" src="assets/Frank.js"></script>
+    <script type="module" src="assets/ania.js"></script>
+    <script type="module" src="assets/joao.js"></script>
   </body>
 </html>
