correct if statement

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img id="salty" src="assets/image/salty.png" width= 150px height= 150px alt="salt">
         </div>
         <div class="auto-click">
-          <button class="btn" id="auto-click"></button>
+          <button class="btn" id="auto-click">Auto-Click</button>
         </div>
         <div class="multi">
           <button class="btn" id="double" disabled>
@@ -46,7 +46,6 @@
       </div>
     </main>
     <footer></footer>
-    <script type="module" src="assets/script.js"></script>
     <script type="module" src="assets/marty.js"></script>
     <script type="module" src="assets/Frank.js"></script>
     <script type="module" src="assets/ania.js"></script>
