modif funct disable

--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
       <div class="container">
         <div class="start">
           <button class="btn" id="start"></button>
-        <img id="salty" src="assets/image/salty.png" width= 150px height= 150px alt="salt">
+          <img
+            id="salty"
+            src="assets/image/salty.png"
+            width="150px"
+            height="150px"
+            alt="salt"
+          />
         </div>
         <div class="auto-click">
           <button class="btn" id="auto-click"></button>
         </div>
         <div class="multi">
-          <button class="btn" id="double" disabled>
+          <button class="btn" id="double">
             <span class="name">Clicker x2</span>
             <span class="price"
               >Cost :
