--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="stylesheet" href="assets/style.css" /> -->
-    
+
     <title>Cookie Clicker</title>
   </head>
 
@@ -30,7 +30,7 @@
           <button class="btn" id="auto-click"></button>
         </div>
         <div class="multi">
-          <button class="btn" id="double">
+          <button class="btn" id="multiX2">
             <span class="name">Clicker x2</span>
             <span class="price"
               >Cost :
@@ -52,15 +52,10 @@
       </div>
     </main>
     <footer></footer>
-<<<<<<< HEAD
-    <script type="module" src="assets/js/joao.js"></script>
-    <script type="module" src="jstest.js"></script>
-=======
     <script type="module" src="assets/script.js"></script>
     <script type="module" src="assets/marty.js"></script>
     <script type="module" src="assets/Frank.js"></script>
     <script type="module" src="assets/ania.js"></script>
     <script type="module" src="assets/joao.js"></script>
->>>>>>> dev
   </body>
 </html>
