--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
       </div>
     </main>
     <footer></footer>
-    <script type="module" src="assets/marty.js"></script>
-    <script type="module" src="assets/Frank.js"></script>
-    <script type="module" src="assets/ania.js"></script>
-    <script type="module" src="assets/joao.js"></script>
+    <script type="text/javascript" src="assets/marty.js"></script>
+    <script type="text/javascript" src="assets/Frank.js"></script>
+    <script type="text/javascript" src="assets/ania.js"></script>
+    <script type="text/javascript" src="assets/joao.js"></script>
   </body>
 </html>
