--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           />
         </div>
         <div class="auto-click">
-          <button class="btn" id="auto-click">Auto-Click</button>
+          <button class="btn" id="auto-click">Auto-Click x1</button>
         </div>
         <div class="multi">
           <button class="btn" id="multiX2">
