--- a/index.html
+++ b/index.html
@@ -40,19 +40,23 @@
       <!-- BUTTON AREA -->
       <div class="container">
         <div class="start">
-          <p> BE MORE SALTY!</p>
-          <p> Click it!! </p>
+          <p>BE MORE SALTY!</p>
+          <p>Click it!!</p>
 
-          <button id="salty">
-          </button>
+          <img
+            id="salty"
+            src="assets/image/salty.png"
+            width="150px"
+            height="150px"
+            alt="salt"
+          />
         </div>
 
         <div class="auto-click">
           <p>INFINITE LAGGING!!</p>
           <p>Autoclick X/s - Cost: X</p>
 
-          <button id="auto-click">
-          </button>
+          <button id="auto-click"></button>
         </div>
 
         <div class="multi">
@@ -62,18 +66,19 @@
             <span class="price">25</span> )
           </p>
 
-          <button id="multiX2">
-          </button>
+          <button id="multiX2"></button>
         </div>
 
         <div class="boost">
           <p>INTERNET SHUTDOWN!!</p>
-          <p><span id="BoostTimer">0</span> seconds of <span id="boostvalue"> x2</span> Bonus - Cost: <span id="boostcost"> 10</span></p>
-          
-          <button id="boost">
-          </button>
-        </div>
+          <p>
+            <span id="BoostTimer">0</span> seconds of
+            <span id="boostvalue"> x2</span> Bonus - Cost:
+            <span id="boostcost"> 10</span>
+          </p>
 
+          <button id="boost"></button>
+        </div>
       </div>
     </main>
     <footer></footer>
